@@ -7,6 +7,9 @@ from 2.5.14-bis to 2.5.15
 - storage size of compressed files was often wrongly stored in archive
   (shorter than reality), the only impact took place at archive listing
   time where the compression ratio was better than reality
+- fixed auto-detected bug condition triggered when -Tslicing is used
+  with --sequential-read. Both options are not compatible and have been
+  excluded by a nicer message than this auto-detection bug message.
 
 from 2.5.14 to 2.5.14-bis
 - avoiding using the syncfs() system call in dar_split when the
